crates/ward_cli/tests/snapshots/codegen__budget.snap
---
source: crates/ward_cli/tests/codegen.rs
description: tests/e2e/budget.ward
---
=== budget.py ===
# Generated by `ward build` from budget.ward. Do not edit.
from __future__ import annotations

from wardscript import _rt

__all__ = [
    "chat",
    "once",
    "slow",
]


def ask(q: str) -> str:
    return _rt.ai("ask", f"Answer: {q}", _rt.String)


def strict(q: str) -> str:
    with _rt.budget("strict", calls=1):
        return _rt.ai("strict", f"Answer: {q}", _rt.String)


def chat(q: str, rounds: int) -> str:
    with _rt.budget("chat", calls=3, tokens=1000, cost=0.05):
        answer = q
        i = 0
        while i < rounds:
            answer = ask(answer)
            i = i + 1
        return answer


def once(q: str) -> str:
    return strict(q)


def slow(seconds: _rt.Trusted[float]) -> str:
    with _rt.budget("slow", time=0.05):
        seconds = _rt.vouched(seconds, "seconds", "slow")
        _rt.call_tool("clock", "sleep", seconds)
        return "done"

=== budget.pyi ===
# Generated by `ward build` from budget.ward. Do not edit.


def chat(q: str, rounds: int) -> str: ...


def once(q: str) -> str: ...


def slow(seconds: _rt.Trusted[float]) -> str: ...
