crates/ward_cli/tests/snapshots/codegen__checks.snap
---
source: crates/ward_cli/tests/codegen.rs
description: tests/e2e/checks.ward
---
=== checks.py ===
# Generated by `ward build` from checks.ward. Do not edit.
from __future__ import annotations

import dataclasses as _dc

from wardscript import _rt

__all__ = [
    "Reply",
    "reply",
]


@_dc.dataclass(frozen=True)
class Reply:
    subject: str
    body: str


def is_polite(text: str) -> bool:
    with _rt.call("is_polite", [("text", text)]):
        return _rt.ai("is_polite", f"Is this polite? Answer true or false.\n\n{text}", _rt.Bool)


def draft(name: str) -> Reply:
    with _rt.call("draft", [("name", name)]):
        def _t1(it):
            if not (name in it.body):
                return "greet the customer by name"
            if not ("http" not in it.body):
                return "no links"
            if not is_polite(it.body):
                return "be polite"
            return None
        return _rt.ai("draft", f"Reply to {name}.", _rt.Adt(Reply), check=_t1)


def reply(name: str) -> Reply:
    with _rt.call("reply", [("name", name)]):
        return draft(name)


def _refine_0(it) -> bool:
    return len(it) <= 30


def _refine_1(it) -> bool:
    return len(it) >= 1


_rt.record(Reply, "Reply", lambda: [
    ("subject", "subject", _rt.Refined(_rt.String, _refine_0, "it.len() <= 30", {"maxLength": 30})),
    ("body", "body", _rt.Refined(_rt.String, _refine_1, "it.len() >= 1", {"minLength": 1})),
])

=== checks.pyi ===
# Generated by `ward build` from checks.ward. Do not edit.
import dataclasses as _dc


@_dc.dataclass(frozen=True)
class Reply:
    subject: str
    body: str


def reply(name: str) -> Reply: ...
