crates/ward_cli/tests/snapshots/codegen__classes.snap
---
source: crates/ward_cli/tests/codegen.rs
description: tests/e2e/classes.ward
---
=== classes.py ===
# Generated by `ward build` from classes.ward. Do not edit.
from __future__ import annotations

import dataclasses as _dc
import typing as _typing

from wardscript import _rt

__all__ = [
    "Agent",
    "Shouter",
    "Named",
    "Store",
    "Memory",
    "run_all",
    "shared",
    "guarded",
    "remember",
    "roundtrip",
    "names",
]


@_dc.dataclass(frozen=True)
class Stats:
    calls: int
    last: str


class Agent:
    name: str
    stats: Stats
    notes: list[str]

    def __init__(self, name: _rt.Trusted[str]) -> None:
        with _rt.call("Agent.init", [("name", name)]):
            name = _rt.vouched(name, "name", "init")
            self.name = name
            self.stats = Stats(calls=0, last="")
            self.notes = []

    def handle(self, text: str) -> str:
        with _rt.call("Agent.handle", [("text", text)]):
            self.stats = _dc.replace(self.stats, calls=self.stats.calls + 1)
            self.notes = [*self.notes, text]
            return f"{self.name} saw {len(self.notes)}"

    def calls(self) -> int:
        with _rt.call("Agent.calls", []):
            return self.stats.calls

    def summarize(self) -> str:
        with _rt.call("Agent.summarize", []):
            return _rt.ai("summarize", f"Summarize these notes:\n{_rt.to_str(self.notes)}", _rt.String)

    def checked(self, limit: int) -> int:
        with _rt.call("Agent.checked", [("limit", limit)]):
            if self.stats.calls > limit:
                raise _rt.Thrown("too many calls")
            return self.stats.calls


class Shouter(Agent):
    loud: bool

    def __init__(self, name: _rt.Trusted[str], loud: _rt.Trusted[bool]) -> None:
        with _rt.call("Shouter.init", [("name", name), ("loud", loud)]):
            name = _rt.vouched(name, "name", "init")
            loud = _rt.vouched(loud, "loud", "init")
            Agent.__init__(self, _rt.Trusted(name))
            self.loud = loud

    def handle(self, text: str) -> str:
        with _rt.call("Shouter.handle", [("text", text)]):
            base = Agent.handle(self, text)
            return base.upper() if self.loud else base


class Named(_typing.Protocol):
    def name(self) -> str: ...


class Store:

    def put(self, value: _rt.Trusted[str]) -> None:
        raise NotImplementedError("Store.put")

    def get(self) -> str:
        raise NotImplementedError("Store.get")

    def name(self) -> str:
        with _rt.call("Store.name", []):
            return "store"


class Memory(Store):
    value: str

    def __init__(self) -> None:
        with _rt.call("Memory.init", []):
            self.value = ""

    def put(self, value: _rt.Trusted[str]) -> None:
        with _rt.call("Memory.put", [("value", value)]):
            value = _rt.vouched(value, "value", "put")
            self.value = value

    def get(self) -> str:
        with _rt.call("Memory.get", []):
            return self.value


def run_all(agents: _rt.Trusted[list[Agent]], text: str) -> list[str]:
    with _rt.call("run_all", [("agents", agents), ("text", text)]):
        agents = _rt.vouched(agents, "agents", "run_all")
        out = []
        for a in agents:
            out = [*out, a.handle(text)]
        return out


def shared() -> int:
    with _rt.call("shared", []):
        a = Agent(_rt.Trusted("a"))
        b = a
        b.handle("x")
        a.handle("y")
        return a.calls()


def guarded(agent: Agent, limit: int) -> int:
    with _rt.call("guarded", [("agent", agent), ("limit", limit)]):
        try:
            return agent.checked(limit)
        except _rt.Thrown:
            return -1


def remember(store: _rt.Trusted[Store], value: _rt.Trusted[str]) -> str:
    with _rt.call("remember", [("store", store), ("value", value)]):
        store = _rt.vouched(store, "store", "remember")
        value = _rt.vouched(value, "value", "remember")
        store.put(_rt.Trusted(value))
        return f"{store.name()}: {store.get()}"


def roundtrip() -> str:
    with _rt.call("roundtrip", []):
        return remember(_rt.Trusted(Memory()), _rt.Trusted("kept"))


def names(items: list[Named]) -> list[str]:
    with _rt.call("names", [("items", items)]):
        out = []
        for n in items:
            out = [*out, n.name()]
        return out


_rt.record(Stats, "Stats", lambda: [
    ("calls", "calls", _rt.Int),
    ("last", "last", _rt.String),
])

=== classes.pyi ===
# Generated by `ward build` from classes.ward. Do not edit.
import dataclasses as _dc
import typing as _typing


@_dc.dataclass(frozen=True)
class Stats:
    calls: int
    last: str


class Agent:
    name: str
    stats: Stats
    notes: list[str]
    def __init__(self, name: _rt.Trusted[str]) -> None: ...
    def handle(self, text: str) -> str: ...
    def calls(self) -> int: ...
    def summarize(self) -> str: ...
    def checked(self, limit: int) -> int: ...


class Shouter(Agent):
    loud: bool
    def __init__(self, name: _rt.Trusted[str], loud: _rt.Trusted[bool]) -> None: ...
    def handle(self, text: str) -> str: ...


class Named(_typing.Protocol):
    def name(self) -> str: ...


class Store:
    def put(self, value: _rt.Trusted[str]) -> None: ...
    def get(self) -> str: ...
    def name(self) -> str: ...


class Memory(Store):
    value: str
    def __init__(self) -> None: ...
    def put(self, value: _rt.Trusted[str]) -> None: ...
    def get(self) -> str: ...


def run_all(agents: _rt.Trusted[list[Agent]], text: str) -> list[str]: ...


def shared() -> int: ...


def guarded(agent: Agent, limit: int) -> int: ...


def remember(store: _rt.Trusted[Store], value: _rt.Trusted[str]) -> str: ...


def roundtrip() -> str: ...


def names(items: list[Named]) -> list[str]: ...
