crates/ward_cli/tests/snapshots/codegen__fallback.snap
---
source: crates/ward_cli/tests/codegen.rs
description: tests/e2e/fallback.ward
---
=== fallback.py ===
# Generated by `ward build` from fallback.ward. Do not edit.
from __future__ import annotations

from wardscript import _rt

__all__ = [
    "digest",
]


def summarize(text: str) -> str:
    with _rt.call("summarize", [("text", text)]):
        return _rt.ai("summarize", f"Summarize in one line: {text}", _rt.String, models=("fast", "smart"), retries=1, backoff=0.0)


def digest(text: str) -> str:
    with _rt.call("digest", [("text", text)]), _rt.budget("digest", calls=3):
        return summarize(text)

=== fallback.pyi ===
# Generated by `ward build` from fallback.ward. Do not edit.


def digest(text: str) -> str: ...
