crates/ward_cli/tests/snapshots/codegen__modules.snap
---
source: crates/ward_cli/tests/codegen.rs
description: tests/e2e/modules/main.wardscript
---
=== main.py ===
# Generated by `ward build` from main.wardscript. Do not edit.
from __future__ import annotations

import shop.orders as _shop_orders
from wardscript import _rt

__all__ = [
    "total",
    "restock",
]


def total(items: list[_shop_orders.Item]) -> int:
    with _rt.call("total", [("items", items)]):
        sum = 0
        for item in items:
            sum = sum + _shop_orders.price(item)
        return sum


def restock(item: _shop_orders.Item) -> _shop_orders.Item:
    with _rt.call("restock", [("item", item)]):
        return _shop_orders.Item(name=item.name, size=_shop_orders.Size.Large, count=item.count + 1)

=== main.pyi ===
# Generated by `ward build` from main.wardscript. Do not edit.

import shop.orders as _shop_orders


def total(items: list[_shop_orders.Item]) -> int: ...


def restock(item: _shop_orders.Item) -> _shop_orders.Item: ...

=== shop/orders.py ===
# Generated by `ward build` from orders.wardscript. Do not edit.
from __future__ import annotations

import dataclasses as _dc
import enum as _enum

from wardscript import _rt

__all__ = [
    "Item",
    "Size",
    "price",
]


@_dc.dataclass(frozen=True)
class Item:
    name: str
    size: Size
    count: int


class Size(_enum.Enum):
    Small = "Small"
    Large = "Large"


def price(item: Item) -> int:
    with _rt.call("price", [("item", item)]):
        if item.size is Size.Small:
            each = 2
        else:
            each = 5
        return each * item.count


_rt.record(Item, "Item", lambda: [
    ("name", "name", _rt.String),
    ("size", "size", _rt.Adt(Size)),
    ("count", "count", _rt.Int),
])
_rt.enum(Size, "Size", lambda: [
    ("Small", Size.Small, []),
    ("Large", Size.Large, []),
])

=== shop/orders.pyi ===
# Generated by `ward build` from orders.wardscript. Do not edit.
import dataclasses as _dc
import enum as _enum


@_dc.dataclass(frozen=True)
class Item:
    name: str
    size: Size
    count: int


class Size(_enum.Enum):
    Small = "Small"
    Large = "Large"


def price(item: Item) -> int: ...
