crates/ward_cli/tests/snapshots/codegen__semantics.snap
---
source: crates/ward_cli/tests/codegen.rs
description: tests/e2e/semantics.ward
---
=== semantics.py ===
# Generated by `ward build` from semantics.ward. Do not edit.
from __future__ import annotations

import dataclasses as _dc

from wardscript import _rt

__all__ = [
    "Point",
    "Box",
    "Shape",
    "Failure",
    "int_div",
    "int_rem",
    "float_rem",
    "rounded",
    "int_or",
    "float_or",
    "shadowing",
    "keywords",
    "bools",
    "compare",
    "moved",
    "set_nested",
    "set_key",
    "sum_keys",
    "wrap",
    "nested",
    "depth",
    "get_or",
    "at",
    "area",
    "classify",
    "caught",
    "thrown",
    "validated",
    "countdown",
    "early",
    "order",
    "noop",
    "float_div",
]


@_dc.dataclass(frozen=True)
class Point:
    x: int
    from_: int


@_dc.dataclass(frozen=True)
class Box:
    item: _T


class Shape:
    pass


@_dc.dataclass(frozen=True)
class Shape_Dot(Shape):
    pass


@_dc.dataclass(frozen=True)
class Shape_Circle(Shape):
    _0: float


@_dc.dataclass(frozen=True)
class Shape_Rect(Shape):
    _0: float
    _1: float


Shape.Dot = Shape_Dot
Shape.Circle = Shape_Circle
Shape.Rect = Shape_Rect


class Failure:
    pass


@_dc.dataclass(frozen=True)
class Failure_Empty(Failure):
    pass


@_dc.dataclass(frozen=True)
class Failure_Bad(Failure):
    _0: str


Failure.Empty = Failure_Empty
Failure.Bad = Failure_Bad


def int_div(a: int, b: int) -> int:
    with _rt.call("int_div", [("a", a), ("b", b)]):
        return _rt.idiv(a, b)


def int_rem(a: int, b: int) -> int:
    with _rt.call("int_rem", [("a", a), ("b", b)]):
        return _rt.irem(a, b)


def float_rem(a: float, b: float) -> float:
    with _rt.call("float_rem", [("a", a), ("b", b)]):
        return _rt.frem(a, b)


def rounded(x: float) -> int:
    with _rt.call("rounded", [("x", x)]):
        return _rt.round_half_away(x)


def int_or(s: str, fallback: int) -> int:
    with _rt.call("int_or", [("s", s), ("fallback", fallback)]):
        return _rt.unwrap_or(_rt.parse_int(s), fallback)


def float_or(s: str, fallback: float) -> float:
    with _rt.call("float_or", [("s", s), ("fallback", fallback)]):
        return _rt.unwrap_or(_rt.parse_float(s), fallback)


def shadowing() -> int:
    with _rt.call("shadowing", []):
        x = 1
        x_2 = 10
        y = x_2 + 1
        x_3 = x + y
        return x_3


def keywords(class_: int) -> int:
    with _rt.call("keywords", [("class", class_)]):
        lambda_ = class_ + 1
        p = Point(x=lambda_, from_=class_)
        return p.from_ + p.x


def bools(a: bool, b: bool) -> str:
    with _rt.call("bools", [("a", a), ("b", b)]):
        return f"{_rt.to_str(a)} {_rt.to_str(b)} {_rt.to_str(a == b)}"


def compare(a: int, b: int, c: bool) -> bool:
    with _rt.call("compare", [("a", a), ("b", b), ("c", c)]):
        return (a == b) == c


def moved(p: Point) -> Point:
    with _rt.call("moved", [("p", p)]):
        q = p
        q = _dc.replace(q, x=100)
        return q


def set_nested(boxes: list[Box[Point]], i: int, v: int) -> list[Box[Point]]:
    with _rt.call("set_nested", [("boxes", boxes), ("i", i), ("v", v)]):
        out = boxes
        out = _rt.list_set(out, i, _dc.replace(_rt.index(out, i), item=_dc.replace(_rt.index(out, i).item, x=v)))
        return out


def set_key(m: dict[str, int], k: str, v: int) -> dict[str, int]:
    with _rt.call("set_key", [("m", m), ("k", k), ("v", v)]):
        out = m
        out = {**out, k: v}
        return out


def sum_keys(m: dict[str, int]) -> str:
    with _rt.call("sum_keys", [("m", m)]):
        keys = ""
        for k in m:
            keys = keys + k
        return keys


def wrap(x: _T) -> _T | None:
    with _rt.call("wrap", [("x", x)]):
        return _rt.some(x)


def nested(x: int | None) -> int | None | None:
    with _rt.call("nested", [("x", x)]):
        return wrap(x)


def depth(x: int | None | None) -> str:
    with _rt.call("depth", [("x", x)]):
        if x is None:
            return "none"
        elif x is not None and _rt.unwrap(x) is None:
            return "some(none)"
        else:
            n = _rt.unwrap(x)
            return f"some(some({n}))"


def get_or(xs: list[int], i: int, d: int) -> int:
    with _rt.call("get_or", [("xs", xs), ("i", i), ("d", d)]):
        return _rt.unwrap_or(_rt.list_get(xs, i), d)


def at(xs: list[int], i: int) -> int:
    with _rt.call("at", [("xs", xs), ("i", i)]):
        return _rt.index(xs, i)


def area(s: Shape) -> float:
    with _rt.call("area", [("s", s)]):
        if isinstance(s, Shape.Dot):
            return 0.0
        elif isinstance(s, Shape.Circle):
            r = s._0
            return 3.0 * r * r
        else:
            w = s._0
            h = s._1
            return w * h


def classify(n: int, s: str, b: bool) -> str:
    with _rt.call("classify", [("n", n), ("s", s), ("b", b)]):
        if n == 0:
            a = "zero"
        elif n == 1:
            a = "one"
        else:
            a = "many"
        if s == "":
            c = "empty"
        else:
            other = s
            c = other
        if b:
            d = "yes"
        else:
            d = "no"
        return f"{a}/{c}/{d}"


def check(s: str) -> int:
    with _rt.call("check", [("s", s)]):
        if len(s) == 0:
            raise _rt.Thrown(Failure.Empty())
        if not s.startswith("ok"):
            raise _rt.Thrown(Failure.Bad(s))
        return len(s)


def caught(s: str) -> str:
    with _rt.call("caught", [("s", s)]):
        try:
            n = check(s)
            return f"ok {n}"
        except _rt.Thrown as _t1:
            err = _t1.value
            if isinstance(err, Failure.Empty):
                return "empty"
            else:
                why = err._0
                return f"bad: {why}"


def thrown(s: str) -> int:
    with _rt.call("thrown", [("s", s)]):
        return check(s)


def short(s: str) -> bool:
    with _rt.call("short", [("s", s)]):
        return len(s) < 5


def validated(s: str) -> str:
    with _rt.call("validated", [("s", s)]):
        try:
            return _rt.validate(s, short, "short", "semantics.ward:183:9")
        except _rt.Thrown as _t1:
            err = _t1.value
            return err


def countdown(n: int) -> list[int]:
    with _rt.call("countdown", [("n", n)]):
        out = []
        i = n
        while i > 0:
            out = [*out, i]
            i = i - 1
        return out


def early(xs: list[int]) -> int:
    with _rt.call("early", [("xs", xs)]):
        for x in xs:
            if x < 0:
                return x
        return 0


def order(c: bool) -> str:
    with _rt.call("order", [("c", c)]):
        _t1 = _rt.call_tool("log", "say", "semantics.ward:213:18", "a")
        if c:
            _t2 = _rt.call_tool("log", "say", "semantics.ward:214:9", "b")
        else:
            t = _rt.call_tool("log", "say", "semantics.ward:216:17", "c")
            _t2 = t
        a = join(_t1, _t2)
        _t3 = c
        if not _t3:
            _rt.call_tool("log", "say", "semantics.ward:220:9", "d")
            _t3 = True
        b = _t3
        return f"{a} {_rt.to_str(b)}"


def join(a: str, b: str) -> str:
    with _rt.call("join", [("a", a), ("b", b)]):
        return a + b


def noop(x: int) -> None:
    with _rt.call("noop", [("x", x)]):
        if x > 0:
            return


def float_div(a: float, b: float) -> float:
    with _rt.call("float_div", [("a", a), ("b", b)]):
        return _rt.fdiv(a, b)


_rt.record(Point, "Point", lambda: [
    ("x", "x", _rt.Int),
    ("from", "from_", _rt.Int),
])
_rt.record(Box, "Box", lambda: [
    ("item", "item", _rt.Param(0)),
])
_rt.enum(Shape, "Shape", lambda: [
    ("Dot", Shape.Dot, []),
    ("Circle", Shape.Circle, [_rt.Float]),
    ("Rect", Shape.Rect, [_rt.Float, _rt.Float]),
])
_rt.enum(Failure, "Failure", lambda: [
    ("Empty", Failure.Empty, []),
    ("Bad", Failure.Bad, [_rt.String]),
])

=== semantics.pyi ===
# Generated by `ward build` from semantics.ward. Do not edit.
import dataclasses as _dc
import typing as _typing

_T = _typing.TypeVar("_T")


@_dc.dataclass(frozen=True)
class Point:
    x: int
    from_: int


@_dc.dataclass(frozen=True)
class Box(_typing.Generic[_T]):
    item: _T


class Shape:
    Dot: _typing.ClassVar[type[Shape_Dot]]
    Circle: _typing.ClassVar[type[Shape_Circle]]
    Rect: _typing.ClassVar[type[Shape_Rect]]


@_dc.dataclass(frozen=True)
class Shape_Dot(Shape):
    pass


@_dc.dataclass(frozen=True)
class Shape_Circle(Shape):
    _0: float


@_dc.dataclass(frozen=True)
class Shape_Rect(Shape):
    _0: float
    _1: float


class Failure:
    Empty: _typing.ClassVar[type[Failure_Empty]]
    Bad: _typing.ClassVar[type[Failure_Bad]]


@_dc.dataclass(frozen=True)
class Failure_Empty(Failure):
    pass


@_dc.dataclass(frozen=True)
class Failure_Bad(Failure):
    _0: str


def int_div(a: int, b: int) -> int: ...


def int_rem(a: int, b: int) -> int: ...


def float_rem(a: float, b: float) -> float: ...


def rounded(x: float) -> int: ...


def int_or(s: str, fallback: int) -> int: ...


def float_or(s: str, fallback: float) -> float: ...


def shadowing() -> int: ...


def keywords(class_: int) -> int: ...


def bools(a: bool, b: bool) -> str: ...


def compare(a: int, b: int, c: bool) -> bool: ...


def moved(p: Point) -> Point: ...


def set_nested(boxes: list[Box[Point]], i: int, v: int) -> list[Box[Point]]: ...


def set_key(m: dict[str, int], k: str, v: int) -> dict[str, int]: ...


def sum_keys(m: dict[str, int]) -> str: ...


def wrap(x: _T) -> _T | None: ...


def nested(x: int | None) -> int | None | None: ...


def depth(x: int | None | None) -> str: ...


def get_or(xs: list[int], i: int, d: int) -> int: ...


def at(xs: list[int], i: int) -> int: ...


def area(s: Shape) -> float: ...


def classify(n: int, s: str, b: bool) -> str: ...


def caught(s: str) -> str: ...


def thrown(s: str) -> int: ...


def validated(s: str) -> str: ...


def countdown(n: int) -> list[int]: ...


def early(xs: list[int]) -> int: ...


def order(c: bool) -> str: ...


def noop(x: int) -> None: ...


def float_div(a: float, b: float) -> float: ...
