crates/ward_cli/tests/snapshots/codegen__ts_budget.snap
---
source: crates/ward_cli/tests/codegen.rs
description: tests/e2e/budget.ward
---
=== budget.ts ===
// Generated by `ward build --target typescript` from budget.ward. Do not edit.
import * as _rt from "wardscript/rt";

async function ask(q: string): Promise<string> {
  return _rt.call("ask", [["q", q]], async () => {
    return (await _rt.ai("ask", `Answer: ${q}`, _rt.String)) as string;
  });
}

async function strict(q: string): Promise<string> {
  return _rt.call("strict", [["q", q]], () => _rt.budget("strict", { calls: 1 }, async () => {
    return (await _rt.ai("strict", `Answer: ${q}`, _rt.String)) as string;
  }));
}

export async function chat(q: string, rounds: number): Promise<string> {
  return _rt.call("chat", [["q", q], ["rounds", rounds]], () => _rt.budget("chat", { calls: 3, tokens: 1000, cost: 0.05 }, async () => {
    let answer!: string;
    let i!: number;
    answer = q;
    i = 0;
    while (i < rounds) {
      answer = await ask(answer);
      i = i + 1;
    }
    return answer;
  }));
}

export async function once(q: string): Promise<string> {
  return _rt.call("once", [["q", q]], async () => {
    return await strict(q);
  });
}

export async function slow(seconds: number | _rt.Trusted<number>): Promise<string> {
  return _rt.call("slow", [["seconds", seconds]], () => _rt.budget("slow", { time: 0.05 }, async () => {
    seconds = _rt.vouched(seconds, "seconds", "slow");
    (await _rt.callTool("clock", "sleep", "budget.ward:38:5", [seconds])) as any;
    return "done";
  }));
}
