crates/ward_cli/tests/snapshots/codegen__ts_checks.snap
---
source: crates/ward_cli/tests/codegen.rs
description: tests/e2e/checks.ward
---
=== checks.ts ===
// Generated by `ward build --target typescript` from checks.ward. Do not edit.
import * as _rt from "wardscript/rt";

export interface Reply {
  readonly subject: string;
  readonly body: string;
}

export const Reply$ = _rt.record("Reply", () => [["subject", _rt.Refined(_rt.String, _refine_0 as (v: never) => boolean, "it.len() <= 30", {"maxLength": 30})], ["body", _rt.Refined(_rt.String, _refine_1 as (v: never) => boolean, "it.len() >= 1", {"minLength": 1})]]);

async function is_polite(text: string): Promise<boolean> {
  return _rt.call("is_polite", [["text", text]], async () => {
    return (await _rt.ai("is_polite", `Is this polite? Answer true or false.

${text}`, _rt.Bool)) as boolean;
  });
}

async function draft(name: string): Promise<Reply> {
  return _rt.call("draft", [["name", name]], async () => {
    let it!: Reply;
    let _t1!: any;
    _t1 = async (it: Reply): Promise<string | null> => {
      if (!it.body.includes(name)) return "greet the customer by name";
      if (!(!it.body.includes("http"))) return "no links";
      if (!(await is_polite(it.body))) return "be polite";
      return null;
    };
    return (await _rt.ai("draft", `Reply to ${name}.`, _rt.Adt(Reply$), { check: _t1 })) as Reply;
  });
}

export async function reply(name: string): Promise<Reply> {
  return _rt.call("reply", [["name", name]], async () => {
    return await draft(name);
  });
}

function _refine_0(it: string): boolean {
  return _rt.strLen(it) <= 30;
}

function _refine_1(it: string): boolean {
  return _rt.strLen(it) >= 1;
}
